--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -164,4 +164,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView8" />
+    <LinearLayout
+        android:id="@+id/another_login_login"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@+id/login_btn"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/login_google_login"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/google"
+            />
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/login_twitter_login"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:src="@drawable/twitter"
+            />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
